--- a/1-navbar/src/index.css
+++ b/1-navbar/src/index.css
@@ -50,6 +50,7 @@ body {
 .nav-links {
   width: 80%;
   display: flex;
+  justify-content: space-around;
   gap: 1rem;
   list-style: none;
   display: none;
@@ -115,6 +116,46 @@ body {
   text-align: center;
   cursor: pointer;
   /* border: 2px solid green; */
+}
+/* Submenu */
+.submenu {
+  position: fixed;
+  background: var(--black-primary);
+  padding: 1rem;
+  width: 15.5rem;
+  border-radius: 0.375rem;
+  visibility: hidden;
+  opacity: 0;
+}
+.submenu.show {
+  opacity: 0.8;
+  visibility: visible;
+}
+.submenu-center {
+  color: var(--white-primary);
+}
+.submenu-center h5 {
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+  text-align: center;
+  line-height: 1.2;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: var(--yellow-flax);
+}
+.submenu-center .submenu-links {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.submenu-center .submenu-links a {
+  display: block;
+  /* text-align: center; */
+  color: var(--white-primary);
+  text-decoration: none;
+}
+.submenu-center .submenu-links a svg {
+  color: var(--white-secondary);
 }
 @media (min-width: 62rem) {
   .nav-links {
