--- a/1-navbar/src/index.css
+++ b/1-navbar/src/index.css
@@ -32,6 +32,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 5rem;
+  margin-top: 2.5rem;
 }
 .nav-center {
   width: var(--fluid-width);
@@ -39,7 +40,8 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  /* align-self: stretch; */
+
+  align-self: stretch;
 }
 .nav-center button {
   border: transparent;
@@ -50,11 +52,13 @@ body {
 .nav-links {
   width: 80%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
   list-style: none;
   display: none;
   color: var(--black-licorice);
+  align-self: stretch;
 }
 
 .link {
@@ -64,6 +68,10 @@ body {
   font-size: 1.2rem;
   font-weight: 400;
   cursor: pointer;
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  padding: 0 2rem;
 }
 
 /* =========SIDEBAR============ */
@@ -76,10 +84,7 @@ body {
   width: 12.5rem;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
-  /* hide sidebar */
-  /* opacity: 0;
-  visibility: hidden; */
+
   opacity: 0;
   transform: translateX(-100%);
   transition: transform 0.2s ease-in-out, opacity 0.3s ease-in-out;
@@ -126,6 +131,9 @@ body {
   border-radius: 0.375rem;
   visibility: hidden;
   opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s ease-in-out;
+  display: none;
 }
 .submenu.show {
   opacity: 0.8;
@@ -157,6 +165,49 @@ body {
 .submenu-center .submenu-links a svg {
   color: var(--white-secondary);
 }
+
+/* SIDEBARLINKS */
+.sidebarLinks {
+  position: fixed;
+  background: var(--black-primary);
+  padding: 1rem;
+  width: 15.5rem;
+  visibility: hidden;
+  opacity: 0;
+
+  transition: all 0.2s ease-in-out;
+}
+.sidebarLinks.show {
+  opacity: 0.8;
+  visibility: visible;
+}
+.sidebarLinks-center {
+  color: var(--white-primary);
+}
+.sidebarLinks-center h5 {
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+  text-align: center;
+  line-height: 1.2;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: var(--yellow-flax);
+}
+.sidebarLinks-center .sidebarLinks-links {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.sidebarLinks-center .sidebarLinks-links a {
+  display: block;
+  /* text-align: center; */
+  color: var(--white-primary);
+  text-decoration: none;
+}
+.sidebarLinks-center .sidebarLinks-links a svg {
+  color: var(--white-secondary);
+}
+
 @media (min-width: 62rem) {
   .nav-links {
     width: 80%;
@@ -169,5 +220,14 @@ body {
   }
   .nav-center {
     justify-content: center;
+  }
+  .submenu {
+    display: block;
+  }
+  .side-bar {
+    display: none;
+  }
+  .sidebarLinks {
+    display: none;
   }
 }
